src/test/ui/regions/regions-assoc-type-static-bound-in-trait-not-met.stderr
error[E0478]: lifetime bound not satisfied
  --> $DIR/regions-assoc-type-static-bound-in-trait-not-met.rs:10:18
   |
LL |     type Value = &'a i32;
   |                  ^^^^^^^
   |
note: lifetime parameter instantiated with the lifetime `'a` as defined here
  --> $DIR/regions-assoc-type-static-bound-in-trait-not-met.rs:9:6
   |
LL | impl<'a> Foo for &'a i32 {
   |      ^^
   = note: but lifetime parameter must outlive the static lifetime

error: aborting due to previous error

For more information about this error, try `rustc --explain E0478`.
